# webscraper

./: .gitignore  audits.py  check_social.py  delete.py  discord_delete.py  get_social.py  imagesearch.py  integrate.py  link2.py  lookup.py  rsvp.py  search.py  spam.py
coffee_data/: coffee_data.py  driver_setup.py
coffee_script/: Cargo.toml  main.rs
discord/: discord_spam.py
driveArchiver/: appsscript.json  archiveLink.gs  archiveShared.gs  moveFilesToFolder.gs  readme
outdated_python_examples/: integrate.py  look_for.py
python_examples/: check_social.py  discord_delete.py  go_to_link.py  image_search.py
rustscraper/: Cargo.toml
rustscraper/src/: catenary.rs  get_html.rs  high_valley.rs  mines.rs  parse_driver.rs  scraper.rs  searcher.rs  sheets.rs
sheets data collection/: check_social.py  get_social.py  imagesearch.py  search.py
