[package]
name = "coffee_test_script"
version = "0.1.0"
edition = "2021"
authors = ["Chelsea Wen <chelseawen03@gmail.com>"]
description = "script to test automation process by downloading a file from squareup.com to local"

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
google-drive3 = "5.0.3"
google-oauth = "1.8.0"
google-service-account-oauth-access-token = "0.1.0"

[lib]
name = "coffee_script"
path = "coffee_script.lib.rs"